add text pagination
